# Market-Data-Feed-Handler

./: CMakeLists.txt
Exchange Simulator/: ExchangeSimulator.cpp  ExchangeSimulator.h
Exchange_Simulator/: main  main.cpp  run  server
Feed_Handler/: BinaryParser.cpp  BinaryParser.h  MarketDataSocket.cpp  MarketDataSocket.h  client  main  main.cpp  run
common/: SymbolCache.cpp  SymbolCache.h  main.cpp  run
include/: cache.h  latency_tracker.h  parser.h  protocol.h  socket.h  visualizer.h
scripts/: benchmark_latency.sh  build.sh  run_client.sh  run_demo.sh  run_server.sh
src/client/: feed_handler.cpp  parser.cpp  socket.cpp  visualizer.cpp
src/server/: exchange_simulator.cpp
